--- a/FootInfection/index.htm
+++ b/FootInfection/index.htm
@@ -1,14 +1,3 @@
-<title>Foot Infection Management</title>
- <o:DocumentProperties>
-  <o:Author>Neal R Barshes, MD, MPH</o:Author>
-  <o:Keywords>foot infection;diabetes;diabetic;management;treatment;clinical;antibiotics;surgery;surgical;amputation;prevention</o:Keywords>
-  <o:Template>Normal</o:Template>
-  <o:LastAuthor>Neal R. Barshes, M.D., M.P.H.</o:LastAuthor>
- </o:DocumentProperties>
-</xml><![endif]-->
-  
-test
-
 Tenets of Treatment:
 1.	Deep infections get drained/incised. 
 2.	Ensure or establish adequate arterial inflow.
@@ -87,6 +76,25 @@ Day #1: Boot, Blood flow, wound care.
 3.	Order outpatient wound care supplies.
 4.	Counsel on smoking cessation (if applicable). Provide resources.
 5.	Optional: Diabetes education (room 3C-123 0800-1530 M-F, pager 1022)
+ 
+ Post-op dressings
+component	Use 21st century management:	Don’t use 19th century tactic :
+directly on the wound	cadexomer iodine gel (Iodosorb)	wet Kerlix
+absorbant layer	2x2 or 4x4 gauze 	dry  Kerlix
+to hold it in place	if small: medium Tegaderm 
+if large: cast padding (Webril)+ ACE wrap, held in place with 2” paper tape folded to create a “quick release tab	more and more Kerlix, then circumferential 1” silk tape 
+
+ 
+ 
+ 
+ 
+ Day #2: Preparing for discharge.
+1.	Consult home health for home wound care.
+2.	Consult infectious disease.
+3.	Order outpatient wound care supplies.
+4.	Counsel on smoking cessation (if applicable). Provide resources.
+5.	Optional: Diabetes education (room 3C-123 0800-1530 M-F, pager 1022)
+
 
  
  
