--- a/FootInfection/index.htm
+++ b/FootInfection/index.htm
@@ -1,10 +1,10 @@
-###Tenets of Treatment:
+Tenets of Treatment:
 1. Deep infections get drained/incised. 
 2. Ensure or establish adequate arterial inflow.
 3. Reconstruct, reestablishing intact epithelium over the entire extremity.
 4. Maintain mobility through the avoidance of amputation.
 
-###Medications:
+Medications:
 S=Statin
 A=Aspirin 81mg  & Antibiotic: ceftriaxone 1gm IV q24h. 
          Vancomycin only if MRSA nares swab is positive OR if  pre-op. for abscess I&D
