--- a/assets/MultimodalAnalgesia.html
+++ b/assets/MultimodalAnalgesia.html
@@ -4,25 +4,20 @@ Consider patient’s age, allergies, weight, renal/hepatic function, surgical pr
 
 SCHEDULED:
 1. Acetaminophen 1 gram IV q6h (scheduled) x24 hours, followed by 500 milligrams PO q6h (scheduled) thereafter
-
 2. Pregabalin 100mg PO q8h x 48 hours, followed by gabapentin 300mg (--> up to 1200mg) PO q8hr thereafter. If eGFR <30mL/min, 200 mg PO once daily (--> max dose 700 mg once daily).
-
 3. Lidocaine 5% topical patches (up to three) x12 hours on adjacent and proximal to surgical site, then 12 hours off. 
 
 Do NOT use non-steroidal antiinflammatory (NSAID) medications because of the high incidence of chronic kidney disease and acute kidney injury among our inpatients.
 
 
-
 AS NEEDED: 
-1. Tramadol 50 or 100 mg PO every 6 hours (for eGFR <30 mL/min, 50 mg PO every 6 hours). Contraindications: history of seizures, monoamine oxidase inhibitor (MAOI) use, or selective serotonin reuptake inhibitor (SSRI) use.
-
-2. Tylenol #3
+1. Tramadol 50 or 100 mg PO q6h PRN. For eGFR <30 mL/min, 50 mg PO every 6 hours. Contraindications: history of seizures, monoamine oxidase inhibitor (MAOI) use, or selective serotonin reuptake inhibitor (SSRI) use.
+2. Tylenol #3 one tablet q6h PRN severe pain. 
 
 Options if still not controlled: morphine 15-30mg PO q4h or fentanyl patch.  
 Consider ibuprofen, ketorolac or other NSAIDs ONLY if eGFR>60, age <60, and no/minimal contrast load.
 
 AVOID oxycodone (Percocet), hydromorphone (Dilaudid), and benzodiazepines.
-
 
 
 BOWEL REGIMEN:
