--- a/EverythingElse/index.html
+++ b/EverythingElse/index.html
@@ -1,35 +1,32 @@
-text
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YPLVGC5FDP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-Management of intermittent claudication: 
+  gtag('config', 'G-YPLVGC5FDP');
+</script>
+</head>
 
-Basic: Understand how to counsel patients with claudication on a community-based exercise program (19"23s in duration).  
 
-Intermediate: Read the full AHA scientific statement here on exercise for claudication. 
 
-Intermediate: Read this chapter on claudication from Cameron’s Current Surgical Management to know when surgical management might be appropriate or beneficial for patients with claudication and how to determine what treatments might be appropriate.  
+### Management of intermittent claudication: 
 
+Basic: Understand how to counsel patients with claudication on a community-based exercise program (19"23s in duration).<br>
+Intermediate: Read the full AHA scientific statement here on exercise for claudication. <br>
+Intermediate: Read this chapter on claudication from Cameron’s Current Surgical Management to know when surgical management might be appropriate or beneficial for patients with claudication and how to determine what treatments might be appropriate. <br>
+
+<p>
+<p>
+
+### Surgical management of carotid disease: 
+Review exposure of the cervical portion of the carotid artery.  <br>
+
+<p>
+<p>
  
-
-Surgical management of carotid disease: 
-
-Review exposure of the cervical portion of the carotid artery.  
-
- 
-
-Leg Amputations: 
-
-A transmetatarsal (TMA) amputation video 
-
-A through-knee amputation video 
-
-An article on transtibial amputation  
-
-A video showing how to do appropriate post-operative leg wrapping (6”11s). 
-
- 
-
-Less frequent but important problems we may see together: 
-
-Identify and treat acute limb ischemia and compartment syndrome (including –rarely-- of the foot).  
-
-A video demonstrating surgical thromboembolectomy of the superior mesenteric artery. 
+### Less frequent but important problems we may see together: 
+Identify and treat acute limb ischemia and compartment syndrome (including –rarely-- of the foot).  <br>
+A video demonstrating surgical thromboembolectomy of the superior mesenteric artery. <br>
